@@ -20,6 +20,9 @@
    - markus@cvs.openbsd.org 2003/06/16 10:22:45
      [ssh-add.c]
      print out key comment on each prompt; make ssh-askpass more useable; ok djm@
+   - markus@cvs.openbsd.org 2003/06/17 18:14:23
+     [cipher-ctr.c]
+     use license from /usr/share/misc/license.template for new code
 
 20030614
  - (djm) Update license on fake-rfc2553.[ch]; ok itojun@
